[package]
name = "nuklear-backend-gfx"
version = "0.8.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["widgets", "gui", "interface", "graphics", "gfx"]
description = "A gfx-rs drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-gfx.git"
homepage = "https://github.com/snuk182/nuklear-backend-gfx"
edition = "2018"

[lib]
name = "nuklear_backend_gfx"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
gfx = "~0.17"
nuklear-rust = "~0.6"
